# rust-sgx-remote-attestation

./: .gitignore  flake.nix
ra-client-enclave/: Cargo.toml
ra-client-enclave/src/: context.rs
ra-client/src/: context.rs
ra-common/src/: msg.rs
ra-enclave/: Cargo.lock.bak
ra-enclave/src/: context.rs
ra-sp/src/: context.rs
sgx-crypto/: Cargo.toml
sgx-crypto/src/: certificate.rs  key_exchange.rs  random.rs  tls_psk.rs
