[package]
name = "ra-client-enclave"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

[features]
verbose = []

[dependencies]
bincode = "1.2.1"
# aesm-client = "0.5"
aesm-client = { path = "../../rust-sgx/aesm-client/" }
sgx-isa = "0.3"
ra-common = { path = "../ra-common" }
sgx-crypto = { path = "../sgx-crypto" }
serde_json = "*"
byteorder = "*"

[[example]]
name = "tls-client"
test = false 
