[package]
name = "sgx-crypto"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

[features]
default = []

[dependencies]
regex = "1.3.3"
base64 = "0.11"
byteorder = "1.2.1"

[target.'cfg(target_env = "sgx")'.dependencies]
mbedtls = "0.8.1"
# mbedtls = { git = "https://github.com/ndokmai/rust-mbedtls.git", default-features = false, features = ["sgx"] }
# mbedtls = { path = "../../rust-mbedtls/mbedtls", default-features = false, features = [ "sgx" ] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
mbedtls = "0.8.1"
# mbedtls = { git = "https://github.com/ndokmai/rust-mbedtls.git" }
# mbedtls = { path = "../../rust-mbedtls/mbedtls" }
